[project]
name = "github-dev-mcp"
version = "0.1.0"
description = "Local-first FastMCP GitHub development server"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100